--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,10 +1,8 @@
 name: Go
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    - cron: '0 5 * * *'
 
 jobs:
 
